fixed navbar issue on safari + phone

--- a/src/style.css
+++ b/src/style.css
@@ -92,7 +92,7 @@ pre {
 .title {
   color: #000000;
   font-family: 'Merriweather', serif;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 300;
   line-height: 40px;
   margin: 0 0px 0px;
